# rust_mongodb_model_methods

./: Cargo.toml  license.md  readme.md
src/: lib.rs
